<?xml version="1.0" encoding="utf-8"?>



<layout xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#4CAF50"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".fragments.UiFragment">



    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/title_name"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:text="@string/question"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:gravity="center"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <Button
        android:clickable="true"
        android:id="@+id/hungryBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:shadowColor="@color/black"
        android:text="@string/answer_btn"
        android:textStyle="bold"
        android:textSize="30sp"
        tools:text="FOOD 1"
        android:focusable="true" />





    </LinearLayout>

</layout>